@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl.principal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
 import org.apache.jackrabbit.api.security.user.Authorizable;
@@ -224,7 +223,7 @@ public class AutoMembershipProviderTest extends AbstractAutoMembershipTest {
         
         // create provider with a group mapping that contains same group as user-mapping
         if (dynamicGroupsEnabled) {
-            Map<String, String[]> grMapping = ImmutableMap.of(IDP_VALID_AM, new String[] {AUTOMEMBERSHIP_GROUP_ID_1});
+            Map<String, String[]> grMapping = Map.of(IDP_VALID_AM, new String[] {AUTOMEMBERSHIP_GROUP_ID_1});
             AutoMembershipProvider amp = new AutoMembershipProvider(root, userManager, getNamePathMapper(), MAPPING, grMapping, getAutoMembershipConfigMapping());
             // external group does have 'automembershipGroup3' as configured autom-membership
             Iterator<Authorizable> it = amp.getMembers(automembershipGroup1, false);
